Bug 270954 - Some windows keep "dancing"
Summary: Some windows keep "dancing"
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 16.12.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-14 15:33 UTC by aditsu
Modified: 2011-04-16 14:21 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aditsu 2011-04-14 15:33:19 UTC
Version:           4.6 (using KDE 4.6.2) 
OS:                Linux

Refer to the video at http://www.youtube.com/watch?v=fHaKkDKY2ZI for an example of a dolphin window "dancing" - it apparently recalculates the layout back and forth. I also noticed the same problem (more often) in the notification window when copying files.

Reproducible: Sometimes
Comment 1 Peter Penz 2011-04-15 14:16:57 UTC
Can you reproduce this issue in Dolphin with a small sample directory when using the details-view? I'm not sure about the notification window but at least in case of the details-view it might be an issue in Dolphin.
Comment 2 aditsu 2011-04-15 14:29:14 UTC
Ah, that was easier than I thought: http://www.youtube.com/watch?v=7j-mcYrbunc
New folder, new text file, and there it is.
Comment 3 Peter Penz 2011-04-15 16:08:36 UTC
Thanks for the video but I cannot reproduce the issue. I've used the same columns, the same directory + content, tried to use the same window width etc.

Could you please give us more information:
- Does this occur only with the details view?
- Does the issue depend on the width of the window?
- Does the issue depend on the number of activated columns?
- Which widget style are you using? Oxygen?

What I could reproduce is that when decreasing the size slowly that the Date-column and Type-column might get clipped although there is enough space. I guess when solving this issue your "dancing" issue will be solved too, but it would be great if I could reproduce the "dancing" too ;-)

Anyhow: Assigned to Dolphin, will investigate...
Comment 4 Peter Penz 2011-04-15 16:10:04 UTC
Ha: Could reproduce it now :-) (1 minute later) The width must have a specific size so that the horizontal slider might get shown.
Comment 5 Peter Penz 2011-04-15 20:31:31 UTC
Git commit 8c6cdd0780404a3edfe2ce6045c86d2375d5942f by Peter Penz.
Committed on 15/04/2011 at 20:35.
Pushed by ppenz into branch 'master'.

Details view: Fix jumping column-widths

If the view has a width where a horizontal scrollbar is required to
show all columns, an endless loop might get triggered that results in a
periodic jumping of the column-widths.

BUG: 270954
FIXED-IN: 4.7.0

M  +35   -9    dolphin/src/views/dolphindetailsview.cpp     
M  +6    -0    dolphin/src/views/dolphindetailsview.h     

http://commits.kde.org/kde-baseapps/8c6cdd0780404a3edfe2ce6045c86d2375d5942f
Comment 6 aditsu 2011-04-16 05:07:07 UTC
Thanks, I also recorded 2 clips for the notification window, one with a large file and another one with a lot of small files: http://www.youtube.com/watch?v=ZVVfJkXAcho and http://www.youtube.com/watch?v=qF2vZYFCWKk
Is that a different issue? Or did your commit also fix it?
Comment 7 Peter Penz 2011-04-16 14:21:27 UTC
@Aditsu: Could you please open a new bug-report for the notification window? The notification window is part of plasma, I guess there should be a sub-category for this. Thanks!