Details view: Fix jumping column-widths

If the view has a width where a horizontal scrollbar is required to
show all columns, an endless loop might get triggered that results in a
periodic jumping of the column-widths.

BUG: 270954
FIXED-IN: 4.7.0